# invoicer

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  fly.toml  invoicer_state.sqlite-shm  invoicer_state.sqlite-wal  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/evals/: legal_cases.jsonl
data/legal/: vat-art-17-odwrotne.md  vat-art-28b.md  vat-art-9-wnt.md  vat-import-towarow.md
docs/: flow-walkthrough.md
docs/evals/: legal-rag-report.md
docs/superpowers/plans/: 2026-06-18-invoicer-01-foundations.md  (+19 more)
scripts/: debug_flow.py  ingest_legal_corpus.py  rag_demo.py  run_evals.py  run_flow_now.py  whatsapp_approval.py  whatsapp_webhook.py
src/invoicer/: app.py  approval_links.py  approvals.py  booking.py  bootstrap.py  cli.py  extraction.py  ledger.py  models.py  observability.py  observability_alerts.py  observability_langsmith.py  observability_sentry.py  observability_status.py  ports.py  processed.py  reasoning.py  runner.py  scheduler.py  security.py  state.py  validation.py  webhook.py
tests/live/: test_claude_extractor_live.py  test_claude_reasoner_live.py  test_fakturownia_live.py  test_gmail_live.py  test_invoice_detector_live.py  test_legal_rag_eval_live.py  test_metrics_live.py  test_pgvector_store_live.py  test_twilio_whatsapp_live.py  test_voyage_embedder_live.py
tests/unit/: test_app.py  test_approval.py  test_approval_links.py  test_booking.py  test_bootstrap.py  test_classification.py  test_claude_extractor.py  test_claude_reasoner.py  test_cli.py  test_documents.py  test_evals.py  test_extraction.py  test_fake_embedder.py  test_fakturownia.py  test_fixture_source.py  test_gmail.py  test_graph.py  test_in_memory_legal_store.py  test_invoice_detector.py  test_ledger.py  test_legal_cases_data.py  test_legal_corpus_data.py  test_legal_store_wiring.py  test_logging_redaction.py  test_metrics_wiring.py  test_mock_subiekt.py  test_models.py  test_nodes.py  test_observability.py  test_observability_alerts.py  test_observability_langsmith.py  test_observability_provenance.py  test_observability_sentry.py  test_observability_status.py  test_pending_approvals.py  test_pgvector_store.py  test_ports.py  test_processed.py  test_rag_corpus.py  test_rag_eval.py  (+19 more)
(+37 files in other folders)
