[project]
name = "invoicer"
version = "0.1.0"
description = "Agentowy asystent ksiegowy — pobiera, waliduje i klasyfikuje faktury (PL tax), z bramka human-in-the-loop."
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10",
    "fastapi>=0.138.0",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.7",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic>=2.7",
    "python-multipart>=0.0.32",
    "sentry-sdk>=2.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
